kcms/keyboard: use KConfig::Notify instead of custom DBus signals for layout config changes

This is a companion commit to
https://invent.kde.org/plasma/kwin/-/merge_requests/7655.

It is a refactoring which drops the custom `org.kde.keyboard.reloadConfig`
DBus signal, replacing it with the more standard KConfig::Notify approach.


BUG: 485362
FIXED-IN: 6.5.0